<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".moviescategories.presentation.MoviesCategoriesFragment"
    android:id="@+id/movies_categories_fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tmd_logo_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/tmd_logo"
            android:layout_marginTop="5dp"
            android:layout_marginStart="18dp"
            app:shapeAppearanceOverlay="@style/round_image_white_bg"/>

        <include
            android:id="@+id/tool"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            layout="@layout/gen_toolbar" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/latest_movies_tv"
                style="@style/sub_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/latest_movies_more_btn"
                style="@style/more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/see_more"
                app:layout_constraintBottom_toBottomOf="@+id/latest_movies_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/latest_movies_tv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latest_movies_rv"
                style="@style/category_rv"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latest_movies_tv" />

            <LinearLayout
                android:id="@+id/latest_retry_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/latest_movies_rv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/latest_movies_rv">

                <TextView
                    android:id="@+id/latest_error_tv"
                    style="@style/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/latest_retry_tv"
                    style="@style/retry"
                    android:text="@string/retry"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/latest_pb"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/orange"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/latest_movies_rv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/latest_movies_rv" />

            <TextView
                android:id="@+id/popular_movies_tv"
                style="@style/sub_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latest_movies_rv" />

            <TextView
                android:id="@+id/popular_movies_more_btn"
                style="@style/more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/see_more"
                app:layout_constraintBottom_toBottomOf="@+id/popular_movies_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/popular_movies_tv" />

            <ProgressBar
                android:id="@+id/popular_pb"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/orange"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/popular_movies_rv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/popular_movies_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_movies_rv"
                style="@style/category_rv"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popular_movies_tv" />

            <LinearLayout
                android:id="@+id/popular_retry_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/popular_movies_rv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/popular_movies_rv">

                <TextView
                    android:id="@+id/popular_error_tv"
                    style="@style/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/popular_retry_tv"
                    style="@style/retry"
                    android:text="@string/retry"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:id="@+id/upcoming_movies_tv"
                style="@style/sub_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popular_movies_rv" />

            <TextView
                android:id="@+id/upcoming_movies_more_btn"
                style="@style/more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/see_more"
                app:layout_constraintBottom_toBottomOf="@+id/upcoming_movies_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/upcoming_movies_tv" />

            <ProgressBar
                android:id="@+id/upcoming_pb"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/orange"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/upcoming_movies_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_movies_rv"
                style="@style/category_rv"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcoming_movies_tv" />

            <LinearLayout
                android:id="@+id/upcoming_retry_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/upcoming_movies_rv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/upcoming_movies_rv">

                <TextView
                    android:id="@+id/upcoming_error_tv"
                    style="@style/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/upcoming_retry_tv"
                    style="@style/retry"
                    android:text="@string/retry"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>